<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/image"
        android:layout_width="84dp"
        android:layout_height="84dp"
        android:layout_marginTop="5dp"
        android:padding="10dp"
        android:background="@drawable/circle_purple_background"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ic_lock_outline_black_24dp"
        android:contentDescription="@string/generate_new_password" />

    <TextView
        android:id="@+id/password_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/image"
        android:text="@string/password_example"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password_value"
        android:layout_marginTop="10dp"
        android:inputType="text">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/password_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_name"
            android:maxLength="18" />

    </android.support.design.widget.TextInputLayout>

</RelativeLayout>