<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/add_image"
        android:layout_width="84dp"
        android:layout_height="84dp"
        android:layout_marginTop="5dp"
        android:layout_centerHorizontal="true"
        android:padding="10dp"
        android:background="@drawable/circle_green_background"
        android:src="@drawable/ic_add_circle_outline_black_24dp"
        android:contentDescription="@string/add_your_custom_password" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/password_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/add_image"
        android:layout_marginTop="10dp"
        app:passwordToggleEnabled="true">

    <android.support.design.widget.TextInputEditText
        android:id="@+id/password_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/your_password"
        android:inputType="textPassword"
        android:maxLength="20" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password_input_layout">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/password_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_name"
            android:inputType="text"
            android:maxLength="18" />

    </android.support.design.widget.TextInputLayout>

</RelativeLayout>