<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:layout_marginStart="7dp"
    android:layout_marginEnd="10dp"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="7dp"
    android:orientation="vertical"
    android:longClickable="true"
    android:elevation="90dp"
    app:cardCornerRadius="0dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txtPasswordName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/fab_margin"
            android:layout_marginTop="@dimen/fab_margin"
            android:text="@string/name_example"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtPasswordValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/fab_margin"
            android:layout_marginTop="55dp"
            android:text="@string/password_example" />

        <Button
            android:id="@+id/copyButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="15dp"
            android:background="@color/yellow"
            android:text="@string/copy"
            android:textColor="@color/white"
            tools:ignore="RelativeOverlap" />

    </RelativeLayout>

</android.support.v7.widget.CardView>